Cambio de boton Agregar (Nuevo) en cada sección

--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -7,7 +7,7 @@
             </div>
             <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 pt-2">
                 <button type="button" class="btn text-white colorBotonAlta" data-bs-toggle="modal" data-bs-target="#modalExperienciaAdd">
-                    <i class="fa-regular fa-square-plus fa-xl"></i>
+                    <i class="fa-solid fa-circle-plus fa-xl"></i>
                 </button>
             </div>
         </div>
