--- a/src/app/componentes/habilidades/habilidades.component.html
+++ b/src/app/componentes/habilidades/habilidades.component.html
@@ -27,7 +27,7 @@
                 <div>
                     <p class="colorOrg mb-0">{{habilidad.tecnologia}}</p>
                 </div>
-                <img [src]="habilidad.url" [alt]="alternativo+habilidad.tecnologia" class="tamañoLogo">
+                <img [src]="habilidad.url_img_tecnologia" [alt]="alternativo+habilidad.tecnologia" class="tamañoLogo">
                 <div class="progress" style="height: 30px;">
                     <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" [style.width.%]="habilidad.porcentaje" aria-valuenow="habilidad.porcentaje" aria-valuemin="0" aria-valuemax="100">{{habilidad.porcentaje}}%</div>
                 </div>
