--- a/src/app/componentes/educacion/educacion.component.html
+++ b/src/app/componentes/educacion/educacion.component.html
@@ -16,7 +16,7 @@
     <div class="container mt-3">
         <div class="row" *ngFor="let estudio of estudios">
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
-                <p>Desde <strong>{{estudio.fechainicio}}</strong> hasta <strong>{{estudio.fechafin}}</strong></p>
+                <p>Desde <strong>{{estudio.fecha_inicio}}</strong> hasta <strong>{{estudio.fecha_fin}}</strong></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">{{estudio.institucion}}</h5>
