--- a/src/app/componentes/experiencia/experiencia.component.html
+++ b/src/app/componentes/experiencia/experiencia.component.html
@@ -16,7 +16,7 @@
     <div class="container mt-3">
         <div class="row" *ngFor="let experiencia of experiencias">
             <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3 pt-2">
-                <p>Desde <strong>{{experiencia.fechainicio}}</strong> hasta <strong>{{experiencia.fechafin}}</strong></p>
+                <p>Desde <strong>{{experiencia.fecha_inicio}}</strong> hasta <strong>{{experiencia.fecha_fin}}</strong></p>
             </div>
             <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 pt-2">
                 <h5 class="colorOrg">{{experiencia.institucion}}</h5>
