--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let proyecto of proyectos">
                 <div class="card" style="width: 29rem;">
-                    <img [src]="proyecto.url" class="card-img-top" [alt]="proyecto.descripcion">
+                    <img [src]="proyecto.url_img_proyecto" class="card-img-top" [alt]="proyecto.descripcion">
                     <div class="card-body">
                         <p class="card-text">{{proyecto.descripcion}}</p>
                     </div>
