--- a/src/app/modales/modal-acercade/modal-acercade.component.html
+++ b/src/app/modales/modal-acercade/modal-acercade.component.html
@@ -9,8 +9,8 @@
             <div class="modal-body p-5 pt-0">
                 <form [formGroup]="form" (ngSubmit)="onEnviar($event)" class="row g-3">
                     <div class="col-12">
-                        <label for="inpuNombre" class="form-label">Nombre y Apellido</label>
-                        <input type="text" formControlName="nombreYApellido" class="form-control" id="inputNombre" placeholder="Nombre y Apellido" required>
+                        <label for="inpuNombreAD" class="form-label">Nombre y Apellido</label>
+                        <input type="text" formControlName="nombreYApellido" class="form-control" id="inputNombreAD" placeholder="Nombre y Apellido">
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="NombreYApellido?.errors && NombreYApellido?.touched">    
@@ -19,8 +19,8 @@
                         </p>
                     </div>
                     <div class="col-md-12">
-                        <label for="inputTitulo" class="form-label">Titulo</label>
-                        <input type="text" formControlName="titulo"  class="form-control" id="inputTitulo" placeholder="Desarrollador Front, Back, otros" required>
+                        <label for="inputTituloAD" class="form-label">Titulo</label>
+                        <input type="text" formControlName="titulo"  class="form-control" id="inputTituloAD" placeholder="Desarrollador Front, Back, otros">
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="Titulo?.errors && Titulo?.touched">    
@@ -29,8 +29,8 @@
                         </p>
                     </div>
                     <div class="col-12">
-                        <label for="inputUrl" class="form-label">URL</label>
-                        <input type="url" formControlName="urlImgPerfil"  class="form-control" id="inputUrl" placeholder="http://..." required>
+                        <label for="inputUrlAD" class="form-label">URL</label>
+                        <input type="url" formControlName="urlImgPerfil"  class="form-control" id="inputUrlAD" placeholder="http://...">
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="UrlImgPerfil?.errors && UrlImgPerfil?.touched">    
@@ -39,9 +39,9 @@
                         </p>
                     </div>
                     <div class="col-12">
-                        <label for="inputDescripcion" class="form-label">Descripción</label>
+                        <label for="inputDescripcionAD" class="form-label">Descripción</label>
                         <!-- <input type="text" class="form-control" id="inputDescripcion" placeholder="Descripción" required> -->
-                        <textarea formControlName="descripcion" class="form-control" name="" id="inputDescripcion" cols="30" rows="5" placeholder="Descripción" required></textarea>
+                        <textarea formControlName="descripcion" class="form-control" name="" id="inputDescripcionAD" cols="30" rows="5" placeholder="Descripción"></textarea>
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="Descripcion?.errors && Descripcion?.touched">    
