--- a/src/app/modales/modal-proyecto-add/modal-proyecto-add.component.html
+++ b/src/app/modales/modal-proyecto-add/modal-proyecto-add.component.html
@@ -9,8 +9,8 @@
             <div class="modal-body p-5 pt-0">
                 <form [formGroup]="form" (ngSubmit)="onEnviar($event)" class="row g-3">
                     <div class="col-12">
-                        <label for="inputUrl" class="form-label">URL Imagen</label>
-                        <input type="url" formControlName="urlImgProyecto" class="form-control" id="inputUrl" placeholder="http://..." required>
+                        <label for="inputUrlProyAdd" class="form-label">URL Imagen</label>
+                        <input type="url" formControlName="urlImgProyecto" class="form-control" id="inputUrlProyAdd" placeholder="http://..." required>
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="UrlImgProyecto?.errors && UrlImgProyecto?.touched">    
@@ -19,9 +19,9 @@
                         </p>
                     </div>
                     <div class="col-12">
-                        <label for="inputDescripcion" class="form-label">Descripción</label>
+                        <label for="inputDescripcionProyAdd" class="form-label">Descripción</label>
                         <!-- <input type="text" class="form-control" id="inputDescripcion" placeholder="Descripción" required> -->
-                        <textarea formControlName="descripcion" class="form-control" name="" id="inputDescripcion" cols="30" rows="5" placeholder="Descripción" required></textarea>
+                        <textarea formControlName="descripcion" class="form-control" name="" id="inputDescripcionProyAdd" cols="30" rows="5" placeholder="Descripción" required></textarea>
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="Descripcion?.errors && Descripcion?.touched">    
