--- a/src/app/componentes/footer/footer.component.html
+++ b/src/app/componentes/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="piePagina colorFondo d-md-flex w-100 mt-2">
-    <div class="container-fluid text-white">
-        <p>Todos los derechos reservados. Richard Díaz Flores</p>
+    <div class="container-fluid text-white row">
+        <p class="col-12 my-3 copyright-ap">Todos los derechos reservados. Richard Díaz Flores - &copy; Argentina Programa - 2022</p>
     </div>
   </footer>
