--- a/src/app/componentes/proyectos/proyectos.component.html
+++ b/src/app/componentes/proyectos/proyectos.component.html
@@ -6,7 +6,7 @@
                 <h4 class="pt-2 pb-2">Proyectos</h4>
             </div>
             <div class="col-xs-12 col-sm-1 col-md-1 col-lg-1 pt-2">
-                <button type="button" class="btn text-white colorBotonAlta" data-bs-toggle="modal" data-bs-target="#modalProyectosAdd">
+                <button type="button" class="btn text-white colorBotonAlta" data-bs-toggle="modal" data-bs-target="#modalProyectosAdd" *ngIf="modoEdicion">
                     <i class="fa-solid fa-circle-plus fa-xl"></i>
                 </button>
             </div>
@@ -15,17 +15,17 @@
 
     <div class="container mt-3">
         <div class="row">
-            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4" *ngFor="let proyecto of proyectos">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 mr-3" *ngFor="let proyecto of proyectos">
                 <div class="card" style="width: 29rem;">
                     <img [src]="proyecto.url_img_proyecto" class="card-img-top" [alt]="proyecto.descripcion">
                     <div class="card-body">
                         <p class="card-text">{{proyecto.descripcion}}</p>
                     </div>
                 </div>
-                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalProyectos">
+                <button type="button" class="btn colorBoton" data-bs-toggle="modal" data-bs-target="#modalProyectos" *ngIf="modoEdicion" (click)="traerProyecto(proyecto.id ?? 0)">
                     <i class="fa-solid fa-pen-to-square fa-lg"></i>
                 </button>
-                <button type="button" class="btn colorBoton">
+                <button type="button" class="btn colorBoton" *ngIf="modoEdicion" (click)="borrarProyecto(proyecto.id ?? 0)">
                     <i class="fa-solid fa-trash fa-lg"></i>
                 </button>
             </div>
