--- a/src/app/modales/modal-educacion/modal-educacion.component.html
+++ b/src/app/modales/modal-educacion/modal-educacion.component.html
@@ -10,7 +10,7 @@
                 <form [formGroup]="form" (ngSubmit)="onEnviar($event)" class="row g-3">
                     <div class="col-12">
                         <label for="inputInstitucionEdu" class="form-label">Institución</label>
-                        <input type="text" formControlName="institucion" class="form-control" id="inputInstitucionEdu" placeholder="Nombre de la institución" required>
+                        <input type="text" formControlName="institucion" class="form-control" id="inputInstitucionEdu" placeholder="Nombre de la institución" [(ngModel)]="educaService.estuMod.institucion">
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="Institucion?.errors && Institucion?.touched">    
@@ -20,7 +20,7 @@
                     </div>
                     <div class="col-12">
                         <label for="inputAddressEdu" class="form-label">Dirección</label>
-                        <input type="text" formControlName="direccion" class="form-control" id="inputAddressEdu" placeholder="Calle, Avda ..." required>
+                        <input type="text" formControlName="direccion" class="form-control" id="inputAddressEdu" placeholder="Calle, Avda ..." [(ngModel)]="educaService.estuMod.direccion">
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="Direccion?.errors && Direccion?.touched">    
@@ -29,8 +29,8 @@
                         </p>
                     </div>
                     <div class="col-12">
-                        <label for="inputPosicionEdu" class="form-label">Título</label>
-                        <input type="text" formControlName="titulo" class="form-control" id="inputPosicionEdu" placeholder="Ingeniero, Contador, Profesor" required>
+                        <label for="inputTituloEdu" class="form-label">Título</label>
+                        <input type="text" formControlName="titulo" class="form-control" id="inputTituloEdu" placeholder="Ingeniero, Contador, Profesor" [(ngModel)]="educaService.estuMod.titulo">
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="Titulo?.errors && Titulo?.touched">    
@@ -40,7 +40,7 @@
                     </div>
                     <div class="col-4">
                         <label for="inputFecInicioEdu" class="form-label">Fecha Inicio</label>
-                        <input type="date" formControlName="fechaInicio" class="form-control" id="inputFecInicioEdu" placeholder="dd/mm/aaaa" required>
+                        <input type="date" formControlName="fechaInicio" class="form-control" id="inputFecInicioEdu" placeholder="dd/mm/aaaa" [(ngModel)]="educaService.estuMod.fecha_inicio" required>
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="FechaInicio?.errors && FechaInicio?.touched">    
@@ -50,7 +50,7 @@
                     </div>
                     <div class="col-4">
                         <label for="inputFecFinalEdu" class="form-label">Fecha Final</label>
-                        <input type="date" formControlName="fechaFin" class="form-control" id="inputFecFinalEdu" placeholder="dd/mm/aaaa" required>
+                        <input type="date" formControlName="fechaFin" class="form-control" id="inputFecFinalEdu" placeholder="dd/mm/aaaa" [(ngModel)]="educaService.estuMod.fecha_fin" required>
                     </div>
                     <!-- Gracias al getter que configuramos en el controlador -->
                     <div *ngIf="FechaFin?.errors && FechaFin?.touched">    
@@ -59,7 +59,7 @@
                         </p>
                     </div>
                     <div class="col-md-12 d-grid gap-2 d-md-flex justify-content-md-end">
-                        <button type="submit" class="btn btn-md rounded-3 btn-outline-success">Grabar</button>
+                        <button type="submit" class="btn btn-md rounded-3 btn-outline-success" data-bs-dismiss="modal">Grabar</button>
                     </div>
                 </form>
             </div>
